--- a/css/style.css
+++ b/css/style.css
@@ -88,6 +88,10 @@ body, div, h1, h2, p {
     background-color: orange;
     justify-content: space-between;
 }
+.copyright {
+    text-align: center;
+    margin-top: 1%;
+}
 h1, h2 {
     font-weight: 700;
     font-size: 35px;
@@ -116,7 +120,8 @@ a {
     padding: 2%;
 }
 .stat {
-    padding: 1% 3%;
+    padding-right: 2%;
+
 }
 .review {
     text-align: center;
