--- a/css/style.css
+++ b/css/style.css
@@ -31,12 +31,14 @@ body, div, h1, h2, p {
 }
 .rc1image {
     background-image: url(../images/bengal-burger.jpg);
+    background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    height: 60vh;
+    height: 80vh;
     display: flex;
     justify-content: center;
     align-items: end;
+    resize: both;
 }
 .c2images, .c3images, .c4image {
     width: 100%;
@@ -51,7 +53,7 @@ body, div, h1, h2, p {
     padding: .5%;
 }
 .c2i, .c3i, .c4ibg {
-    width: 33%; /* Adjust width to 1/3 of the parent */
+    width: 33%;
     display: inline-block;
     height: 500px;
     overflow: hidden;
@@ -113,7 +115,7 @@ a {
     text-decoration: none;
 }
 .checked {
-    color: red;
+    color: rgb(230, 3, 3);
 }
 .recipeStats {
     background-color: rgb(190, 190, 203);
@@ -143,11 +145,18 @@ a {
 .ingredients {
     width:30%;
 }
+.buttons {
+    display: flex;
+    justify-content: center;
+}
 input {
     border-radius: 20px;
-    background-color: red;
+    background-color: rgb(230, 3, 3);
     color: white;
     width: 10%;
+    font-size: large;
+    font-weight: 600;
+    margin-right: 1%;
 }
 .brn-print {
     background-color: rgb(216, 216, 216);
