--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@ body, div, h1, h2, p {
 }
 .container2, .container3, .container4 {
     padding: 10px 50px ;
+    min-width: 1000px;
 }
 
 .header {
@@ -16,6 +17,7 @@ body, div, h1, h2, p {
     width: 100%;
     justify-content: space-between;
     align-items: center;
+    min-width: 1200px;
 }
 .logo, .right {
     margin: 1% 5% 0 1%;
@@ -28,6 +30,7 @@ body, div, h1, h2, p {
     display: flex;
     justify-content: center;
     align-items: end;
+    min-width: 1000px;
 }
 .rc1image {
     background-image: url(../images/bengal-burger.jpg);
@@ -38,24 +41,21 @@ body, div, h1, h2, p {
     display: flex;
     justify-content: center;
     align-items: end;
-    resize: both;
 }
 .c2images, .c3images, .c4image {
     width: 100%;
     display: flex;
-    overflow: hidden;
     justify-content: space-evenly;
+    min-width: 1000px;
 }
 .center {
-    margin-bottom: 1%;
+    margin-bottom: 2em;
     text-align: center;
     background-color: white;
     padding: .5%;
 }
 .c2i, .c3i, .c4ibg {
     width: 33%;
-    display: inline-block;
-    height: 500px;
     overflow: hidden;
     padding: 1%;
 }
@@ -64,25 +64,37 @@ body, div, h1, h2, p {
     height: 100%;
     display: flex;
     object-fit: cover;
+    max-height: 7em;
 }
-.c2text, .c3text, .c4text {
+.c2text, .c4text {
     display: flex;
     width: 100%;
     justify-content: space-around;
     margin-bottom: 2%;
+    min-width: 1000px;
+    align-self: center;
 
 }
-.c2t, .c4t {
+.c2t, .c3t, .c4t {
     width: 33%;
     text-align: center;
 }
-.c3t {
-    background-color: white;
-    padding: 5px;
+.c3images {
+    column-gap: 2rem;
 }
-.c3i {
-    width: 25%;
-    height: 400px;
+.c3i img {
+    width: 100%;
+    object-fit: cover;
+    height: 300px;
+}
+.c3t {
+    display: flex;
+    width: 100%;
+    background-color: white;
+    height: 6rem;
+    margin-top: 1rem;
+    align-items: center;
+    padding: 3px;
 }
 .footer {
     display: flex;
@@ -94,7 +106,7 @@ body, div, h1, h2, p {
     text-align: center;
     margin-top: 1%;
 }
-h1, h2 {
+h1, h2, .h2 {
     font-weight: 700;
     font-size: 35px;
     padding-bottom: 1%;
@@ -116,10 +128,14 @@ a {
 }
 .checked {
     color: rgb(230, 3, 3);
+    margin-bottom: 1.5%;
 }
 .recipeStats {
     background-color: rgb(190, 190, 203);
     padding: 2%;
+}
+.rcontainer2 h2 {
+    margin-bottom: 0;
 }
 .stat {
     padding-right: 2%;
@@ -136,14 +152,22 @@ a {
 }
 .rcontainer3 {
     display: flex;
+    flex-direction: column;
+}
+.rc3text {
+    display: flex;
+    width: 100%;
     justify-content: space-evenly;
 }
 .ingredients, .directions {
     width: 50%;
     padding: 1% 2%;
+    min-width: 20em;
+    font-size: medium;
 }
-.ingredients {
-    width:30%;
+.videoLink {
+    text-align: center;
+    margin-bottom: 1em;
 }
 .buttons {
     display: flex;
@@ -164,3 +188,4 @@ input {
     width: 50px;
     border-radius: 50%;
 }
+
